# Quant_Terminal

./: Cargo.toml  Dockerfile  README.md  package-lock.json
src/: avellaneda_stoikov.rs  binomial_poisson.rs  black_scholes.rs  bonds.rs  brownian_motion.rs  charts.rs  handlers.rs  main.rs  market_maker.rs  option_strategies.rs  utils.rs
static/: avellaneda-stoikov.html  binomial-poisson.html  black-scholes.html  bonds.html  brownian-motion.html  glosten-milgrom.html  index.html  market-maker.html  option-strategies.html
static/css/: input.css  output.css  styles.css
static/js/: shared.js
templates/: avellaneda_stats.html  binomial_poisson_stats.html  black_scholes_stats.html  bonds_stats.html  brownian_stats.html  chart.html  glosten_stats.html  option_strategies_stats.html  simulation_results.html
